added a few files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
         <title>GitHub Test Repo</title> 
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Header</h1>
-        <p>Description</p>
-        <img class="forest-image" src="images/download (5).png">
+        <div id="content">    
+            <h1>Header</h1>
+            <p>Description</p>
+            <img src="images/download (5).png" alt="Forest image">
+        </div>    
+        <div class=page1></div>
+        <div class=page2></div>
+        <div class=page3></div>
+        <div class=page4></div>
     </body>   
 </html>
