got the book to turn pages on hover

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>GitHub Test Repo</title> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="style.css">
-        <script defer src="js/script.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <div id="content">    
@@ -11,9 +11,25 @@
             <p>Description</p>
             <img src="images/download (5).png" alt="Forest image">
         </div>    
-        <div onhover="changePage()" id="page1" class="page1"></div>
-        <div onhover="changePage()" id="page2" class="page2"></div>
-        <div onhover="changePage()" id="page3" class="page3"></div>
-        <div onhover="changePage()" id="page4" class="page4"></div>
+        <div onhover="changePage()" id="page1" class="page">
+            <h2>Page 1 title</h2>
+            <p>Page 1 text</p>
+        </div>
+        
+        <div onhover="changePage()" id="page2" class="page">
+            <h2>Page 2 title</h2>
+            <p>Page 2 text</p>
+        </div>
+        
+        <div onhover="changePage()" id="page3" class="page">
+            <h2>Page 3 title</h2>
+            <p>Page 3 text</p>
+        </div>
+
+        <div onhover="changePage()" id="page4" class="page">
+            <h2>Page 4 title</h2>
+            <p>Page 4 text</p>
+        </div>
+
     </body>   
 </html>
