fixed added buttons

--- a/index.html
+++ b/index.html
@@ -14,22 +14,30 @@
         <div onhover="changePage()" id="page1" class="page">
             <h2>Page 1 title</h2>
             <p>Page 1 text</p>
+            <button class="button" id="prevButton"><-</button>
+            <button class="button" id="nextButton">-></button>
         </div>
         
         <div onhover="changePage()" id="page2" class="page">
             <h2>Page 2 title</h2>
             <p>Page 2 text</p>
+            <button class="button" id="prevButton"><-</button>
+            <button class="button" id="nextButton">-></button>
         </div>
         
         <div onhover="changePage()" id="page3" class="page">
             <h2>Page 3 title</h2>
             <p>Page 3 text</p>
+            <button class="button" id="prevButton"><-</button>
+            <button class="button" id="nextButton">-></button>
         </div>
 
         <div onhover="changePage()" id="page4" class="page">
             <h2>Page 4 title</h2>
             <p>Page 4 text</p>
+            <button class="button" id="prevButton"><-</button>
+            <button class="button" id="nextButton">-></button>
         </div>
-
+        <p value="" style="hidden" id="hiddenP">
     </body>   
 </html>
